--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "exceljs": "^4.4.0",
     "moment": "^2.30.1",
     "papaparse": "^5.4.1",
+    "sass": "^1.89.2",
+    "sass-loader": "^13.0.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
